--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,10 @@ header h1{
 }
 header ul{
     height:40px;
+    clear:left;
+}
+header li{
+  list-tyle-type:none;
 }
 .navi{
   float:left;
@@ -37,12 +41,6 @@ header ul{
   background-color:#00bfff;
 }
 
-
-
-header ul{
-  clear:left;
-}
-
 main{
   background-image:url(../img/background_img.png);
   background-size:cover;
@@ -52,7 +50,6 @@ main{
 .profile01{
   width:450px;
   height:50px;
-  background-color:white;
   background-color:rgba(255,255,255,0.2);
   color:#0000cd;
   font-size:38px;
