--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,7 +44,7 @@ header ul{
 }
 
 main{
-  background-image:url(../img/background_img.png);
+  background-image:url(background_img.png);
   background-size:cover;
   height:550px;
   position:relative;
