--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,9 +52,8 @@ main{
 .profile01{
   width:450px;
   height:50px;
-  background-color:white;
   background-color:rgba(255,255,255,0.2);
-  color:#0000cd;
+  color:#2e8b57;
   font-size:38px;
   font-weight:bold;
   padding:10px 30px 10px 30px;
@@ -69,7 +68,7 @@ main{
   width:450px;
   height:250px;
   background-color:rgba(255,255,255,0.2);
-  color:#0000cd;
+  color:#2e8b57;
   font-size:18px;
   font-weight:normal;
   padding:10px 30px 10px 30px;
