--- a/stylesheet.css
+++ b/stylesheet.css
@@ -53,7 +53,7 @@ main{
   width:450px;
   height:50px;
   background-color:rgba(255,255,255,0.2);
-  color:#2e8b57;
+  color:#000080;
   font-size:38px;
   font-weight:bold;
   padding:10px 30px 10px 30px;
@@ -68,7 +68,7 @@ main{
   width:450px;
   height:250px;
   background-color:rgba(255,255,255,0.2);
-  color:#2e8b57;
+  color:#000080;
   font-size:18px;
   font-weight:normal;
   padding:10px 30px 10px 30px;
